--- a/locationservice/pom.xml
+++ b/locationservice/pom.xml
@@ -17,6 +17,9 @@
     </parent>
 
     <properties>
+        <!-- Generic properties -->
+        <java.version>1.8</java.version>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
     </properties>
