--- a/EurekaService/src/main/resources/application.yml
+++ b/EurekaService/src/main/resources/application.yml
@@ -16,3 +16,25 @@ logging:
   level:
     com.netflix: 'WARN'
     org.springframework.cloud: 'WARN'
+#  level:
+#    com.netflix: 'WARN'
+#    org.springframework.cloud: 'WARN'
+
+
+
+
+#    server:
+#      port: 8761
+#    spring:
+#      application:
+#        name: Discovery-Server
+#
+#    eureka:
+#      instance:
+#        appname: Eureka-Server-1
+#
+#      client:
+#        register-with-eureka: true
+#        fetch-registry: true
+#        service-url:
+#          defaultZone: http://127.0.0.1:8761/eureka/,http://127.0.0.1:8762/eureka/
